[gd_scene load_steps=6 format=3 uid="uid://o6onj427635j"]

[ext_resource type="Script" path="res://Scripts/road_piece.gd" id="1_y0qw8"]
[ext_resource type="PackedScene" uid="uid://dlnnhupxweuyd" path="res://Scenes/cell.tscn" id="2_llaa8"]
[ext_resource type="Script" path="res://Scripts/obstacle_placer.gd" id="3_rqas5"]
[ext_resource type="Script" path="res://Scripts/RoadMaker.gd" id="4_yu87f"]

[sub_resource type="Curve3D" id="Curve3D_xwe3t"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 13, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="road_exp_1" type="Path3D"]
curve = SubResource("Curve3D_xwe3t")
script = ExtResource("1_y0qw8")
road_length = 13.0
road_width = 5
road_length_in_cells = 13
first_row_coords = 0.84
cell_size = 1.0

[node name="PathFollow3D" type="PathFollow3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Road" type="CSGPolygon3D" parent="."]
snap = 0.013225
polygon = PackedVector2Array(0, 0, 0, 0.1, 5.68, 0.1, 5.68, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 180.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="BorderLeft" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.100552, 0)
snap = 0.013225
polygon = PackedVector2Array(0, 0, 0, 0.1, 0.34, 0.1, 0.34, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 180.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="BorderRight" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.100552, 5.34)
snap = 0.013225
polygon = PackedVector2Array(0, 0, 0, 0.1, 0.34, 0.1, 0.34, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 180.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="CellsContainer" type="Node3D" parent="."]

[node name="Cell_0_3" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.84)

[node name="Cell_0_4" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 0.84)
coords = Vector2(0, 1)

[node name="Cell_0_5" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 0.84)
coords = Vector2(0, 2)

[node name="Cell_0_6" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, 0.84)
coords = Vector2(0, 3)

[node name="Cell_0_9" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 0.84)
coords = Vector2(0, 4)

[node name="Cell_0_10" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, 0.84)
coords = Vector2(0, 5)

[node name="Cell_0_13" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.5, 0.84)
coords = Vector2(0, 6)

[node name="Cell_0_14" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0.5, 0.84)
coords = Vector2(0, 7)

[node name="Cell_0_17" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0.5, 0.84)
coords = Vector2(0, 8)

[node name="Cell_0_18" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, 0.84)
coords = Vector2(0, 9)

[node name="Cell_0_20" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0.5, 0.84)
coords = Vector2(0, 10)

[node name="Cell_0_23" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0.5, 0.84)
coords = Vector2(0, 11)

[node name="Cell_0_24" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0.5, 0.84)
coords = Vector2(0, 12)

[node name="Cell_1_3" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 1.84)
coords = Vector2(1, 0)

[node name="Cell_1_4" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 1.84)
coords = Vector2(1, 1)

[node name="Cell_1_5" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 1.84)
coords = Vector2(1, 2)

[node name="Cell_1_6" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, 1.84)
coords = Vector2(1, 3)

[node name="Cell_1_9" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 1.84)
coords = Vector2(1, 4)

[node name="Cell_1_10" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, 1.84)
coords = Vector2(1, 5)

[node name="Cell_1_13" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.5, 1.84)
coords = Vector2(1, 6)

[node name="Cell_1_14" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0.5, 1.84)
coords = Vector2(1, 7)

[node name="Cell_1_17" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0.5, 1.84)
coords = Vector2(1, 8)

[node name="Cell_1_18" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, 1.84)
coords = Vector2(1, 9)

[node name="Cell_1_20" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0.5, 1.84)
coords = Vector2(1, 10)

[node name="Cell_1_23" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0.5, 1.84)
coords = Vector2(1, 11)

[node name="Cell_1_24" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0.5, 1.84)
coords = Vector2(1, 12)

[node name="Cell_2_3" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 2.84)
coords = Vector2(2, 0)

[node name="Cell_2_4" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 2.84)
coords = Vector2(2, 1)

[node name="Cell_2_5" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 2.84)
coords = Vector2(2, 2)

[node name="Cell_2_6" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, 2.84)
coords = Vector2(2, 3)

[node name="Cell_2_9" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 2.84)
coords = Vector2(2, 4)

[node name="Cell_2_10" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, 2.84)
coords = Vector2(2, 5)

[node name="Cell_2_13" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.5, 2.84)
coords = Vector2(2, 6)

[node name="Cell_2_14" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0.5, 2.84)
coords = Vector2(2, 7)

[node name="Cell_2_17" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0.5, 2.84)
coords = Vector2(2, 8)

[node name="Cell_2_18" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, 2.84)
coords = Vector2(2, 9)

[node name="Cell_2_20" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0.5, 2.84)
coords = Vector2(2, 10)

[node name="Cell_2_23" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0.5, 2.84)
coords = Vector2(2, 11)

[node name="Cell_2_24" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0.5, 2.84)
coords = Vector2(2, 12)

[node name="Cell_3_11" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 3.84)
coords = Vector2(3, 0)

[node name="Cell_3_12" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 3.84)
coords = Vector2(3, 1)

[node name="Cell_3_13" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 3.84)
coords = Vector2(3, 2)

[node name="Cell_3_14" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, 3.84)
coords = Vector2(3, 3)

[node name="Cell_3_15" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 3.84)
coords = Vector2(3, 4)

[node name="Cell_3_16" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, 3.84)
coords = Vector2(3, 5)

[node name="Cell_3_17" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.5, 3.84)
coords = Vector2(3, 6)

[node name="Cell_3_18" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0.5, 3.84)
coords = Vector2(3, 7)

[node name="Cell_3_19" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0.5, 3.84)
coords = Vector2(3, 8)

[node name="Cell_3_20" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, 3.84)
coords = Vector2(3, 9)

[node name="Cell_3_21" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0.5, 3.84)
coords = Vector2(3, 10)

[node name="Cell_3_23" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0.5, 3.84)
coords = Vector2(3, 11)

[node name="Cell_3_24" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0.5, 3.84)
coords = Vector2(3, 12)

[node name="Cell_4_0" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 4.84)
coords = Vector2(4, 0)

[node name="Cell_4_1" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 4.84)
coords = Vector2(4, 1)

[node name="Cell_4_2" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 4.84)
coords = Vector2(4, 2)

[node name="Cell_4_3" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, 4.84)
coords = Vector2(4, 3)

[node name="Cell_4_4" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 4.84)
coords = Vector2(4, 4)

[node name="Cell_4_5" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, 4.84)
coords = Vector2(4, 5)

[node name="Cell_4_6" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.5, 4.84)
coords = Vector2(4, 6)

[node name="Cell_4_7" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0.5, 4.84)
coords = Vector2(4, 7)

[node name="Cell_4_8" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0.5, 4.84)
coords = Vector2(4, 8)

[node name="Cell_4_9" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, 4.84)
coords = Vector2(4, 9)

[node name="Cell_4_10" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 0.5, 4.84)
coords = Vector2(4, 10)

[node name="Cell_4_23" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0.5, 4.84)
coords = Vector2(4, 11)

[node name="Cell_4_24" parent="CellsContainer" instance=ExtResource("2_llaa8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0.5, 4.84)
coords = Vector2(4, 12)

[node name="ObstaclePlacer" type="Node3D" parent="."]
script = ExtResource("3_rqas5")
max_count = 1

[node name="T_RoadMaker" type="Node3D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("4_yu87f")
parent = NodePath("..")
road_length = 13
road_width = 5
cell_size = 1.0
border_width = 0.34
cell_scene = ExtResource("2_llaa8")
